--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
   google_sign_in: ^6.2.2
+  flutter_facebook_auth: ^7.1.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
