--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^1.1.0
   flutter_keyboard_visibility: ^6.0.0
   cloud_firestore: ^5.6.2
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
