Changing the name and icon of the app, and images

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     </queries>
 
     <application
-        android:label="hometouch"
+        android:label="HomeTouch"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
 
