--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^5.6.2
   shared_preferences: ^2.3.5
   connectivity_plus: ^4.0.1
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/app icon.png"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -69,7 +76,14 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/lost of connection.png
-  #   - images/a_dot_ham.jpeg
+    - assets/logo.png
+    - assets/snTOtoK.jpeg
+    - assets/truck.png
+    - assets/nsBfMGm.jpeg
+    - assets/YAdipxY.png
+    - assets/google.png
+    - assets/facebock.png
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
