--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   shared_preferences: ^2.3.5
   connectivity_plus: ^4.0.1
   flutter_launcher_icons: ^0.14.3
+  google_maps_flutter: ^2.10.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
