--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - assets/YAdipxY.png
     - assets/google.png
     - assets/facebock.png
+    - assets/placeholder_image.jpg
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
