--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   google_maps_flutter: ^2.10.0
   geolocator: ^13.0.2
+  url_launcher: ^6.3.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
