--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   geolocator: ^13.0.2
   url_launcher: ^6.3.1
   intl: ^0.20.2
+  font_awesome_flutter: ^10.8.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
