--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   intl: ^0.20.2
   font_awesome_flutter: ^10.8.0
   image_picker: ^1.1.2
+  location: ^8.0.0
+  flutter_background_service: ^5.1.0
+  flutter_braintree: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -90,6 +93,9 @@ flutter:
     - assets/google.png
     - assets/facebock.png
     - assets/placeholder_image.jpg
+    - assets/customer_pin.png
+    - assets/car_pin.png
+
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
