--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,6 +8,9 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+Project background_geolocation = project(':flutter_background_geolocation')
+apply from: "${background_geolocation.projectDir}/background_geolocation.gradle"
+
 android {
     namespace = "com.example.hometouch"
     compileSdk = flutter.compileSdkVersion
@@ -38,6 +41,7 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+            shrinkResources false 
         }
     }
 }
