--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,10 @@ dependencies:
   syncfusion_flutter_charts: ^28.2.9
   syncfusion_flutter_gauges: ^28.2.9
   cached_network_image: ^3.4.1
-  # flutter_background_geolocation: ^4.16.9
+  flutter_background_geolocation:
+    git:
+      url: https://github.com/transistorsoft/flutter_background_geolocation.git
+  background_fetch: ^1.3.8
 
 dev_dependencies:
   flutter_test:
